--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "dependencies": {
     "chalk": "^1.1.3",
     "co": "^4.6.0",
+    "eslint-config-airbnb-base": "^11.1.2",
+    "eslint-plugin-import": "^2.2.0",
     "yeoman-generator": "^1.0.0",
     "yosay": "^1.2.1"
   },
