--- a/generators/app/templates/package.json
+++ b/generators/app/templates/package.json
@@ -32,35 +32,26 @@
     "instrument": true
   },
   "dependencies": {
-    "body-parser": "~1.15.2",
-    "cookie-parser": "~1.4.3",
+    "body-parser": "^1.15.2",
     "debug": "^2.2.0",
-    "express": "~4.14.0",
+    "express": "^4.14.0",
     "humps": "^2.0.0",
     "joi": "^10.2.0",
-    "jsonwebtoken": "^7.3.0",
-    "morgan": "~1.7.0",
-    "passport": "^0.3.2",
-    "pg-monitor": "^0.7.1",
-    "pg-promise": "^5.5.2",
-    "serve-favicon": "~2.3.0"
+    "morgan": "^1.7.0",
+    "pg-promise": "^5.5.2"
   },
   "devDependencies": {
     "@types/humps": "^1.1.2",
-    "@types/bcrypt": "^1.0.0",
-    "@types/bluebird": "^3.0.37",
-    "@types/body-parser": "0.0.33",
+    "@types/body-parser": "^1.16.3",
     "@types/chai": "^3.4.34",
     "@types/chai-http": "^0.0.30",
     "@types/debug": "0.0.29",
     "@types/express": "^4.0.35",
     "@types/joi": "^10.0.0",
-    "@types/jsonwebtoken": "^7.2.0",
     "@types/mocha": "^2.2.39",
     "@types/morgan": "^1.7.32",
     "@types/node": "^7.0.0",
-    "@types/passport": "^0.3.3",
-    "@types/sinon": "^1.16.35",
+    "@types/sinon": "^2.1.1",
     "chai": "^3.5.0",
     "chai-http": "^3.0.0",
     "gulp": "^3.9.1",
@@ -71,9 +62,9 @@
     "node-mocks-http": "^1.6.1",
     "nodemon": "^1.11.0",
     "nyc": "^10.1.2",
-    "sinon": "^1.17.7",
-    "ts-node": "^2.0.0",
-    "tslint": "^4.3.1",
+    "sinon": "^2.1.0",
+    "ts-node": "^3.0.2",
+    "tslint": "^5.0.0",
     "typescript": "^2.1.5"
   }
 }
